--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,4 +59,11 @@ dependencies {
 
     implementation "com.jakewharton:butterknife:8.8.1"
     annotationProcessor "com.jakewharton:butterknife-compiler:8.8.1"
+    testCompile 'junit:junit:4.12'
+    testCompile 'org.mockito:mockito-core:2.19.0'
+    testCompile "org.powermock:powermock-module-junit4:2.0.0-beta.5"
+    testCompile("org.robolectric:robolectric:3.8") {
+        exclude group: 'commons-logging', module: 'commons-logging'
+        exclude group: 'org.apache.httpcomponents', module: 'httpclient'
+    }
 }
