--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,14 @@ android {
     testOptions {
         unitTests.all { jvmArgs '-noverify' }
     }
+    flavorDimensions "all"
+    productFlavors {
+        prod {
+       }
+
+        mock {
+        }
+    }
 }
 
 apply from: '../versions.gradle'
@@ -59,6 +67,7 @@ dependencies {
 
     implementation "com.jakewharton:butterknife:8.8.1"
     annotationProcessor "com.jakewharton:butterknife-compiler:8.8.1"
+
     testCompile 'junit:junit:4.12'
     testCompile 'org.mockito:mockito-core:2.19.0'
     testCompile "org.powermock:powermock-module-junit4:2.0.0-beta.5"
@@ -66,4 +75,15 @@ dependencies {
         exclude group: 'commons-logging', module: 'commons-logging'
         exclude group: 'org.apache.httpcomponents', module: 'httpclient'
     }
+
+    androidTestCompile "com.android.support:support-v4:${supportVersion}"
+    androidTestCompile "com.android.support:appcompat-v7:$supportVersion"
+    androidTestCompile "com.android.support:recyclerview-v7:${supportVersion}"
+    androidTestCompile "com.android.support:design:$supportVersion"
+
+    androidTestCompile "com.android.support.test:runner:1.0.2"
+    androidTestCompile "com.android.support.test:rules:1.0.2"
+    androidTestCompile "com.android.support.test.espresso:espresso-core:${espressoVersion}"
+    androidTestCompile "com.android.support.test.espresso:espresso-intents:${espressoVersion}"
+    androidTestCompile "com.android.support.test.espresso:espresso-contrib:${espressoVersion}"
 }
